--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: springboot-app
+    labels:
+      com.docker.compose.service: app
     ports:
       - "8080:8080"
     environment:
@@ -13,6 +15,11 @@ services:
 #      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/myapp
 #      - SPRING_DATASOURCE_USERNAME=postgres
 #      - SPRING_DATASOURCE_PASSWORD=postgres
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     depends_on:
       postgres:
         condition: service_healthy
@@ -94,14 +101,24 @@ services:
     image: docker.elastic.co/beats/filebeat:8.8.0
     container_name: filebeat
     user: root
+    privileged: true
     volumes:
       - ./docker/filebeat/config:/usr/share/filebeat/config
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
     command: ["filebeat", "-c", "/usr/share/filebeat/config/filebeat.yml", "-e"]
     depends_on:
-      - elasticsearch
-      - kibana
+#      - elasticsearch
+#      - kibana
+      elasticsearch:
+        condition: service_healthy
+      kibana:
+        condition: service_started
+    healthcheck:
+      test: [ "CMD-SHELL", "filebeat test config && filebeat test output" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     networks:
       - app-network
 
